--- a/manifest.json
+++ b/manifest.json
@@ -3,9 +3,10 @@
   "name": "Pryme Academy Fitness",
   "icons": [
     {
-      "src": "https://api.dicebear.com/7.x/initials/svg?seed=P&backgroundColor=f97316",
-      "type": "image/svg+xml",
-      "sizes": "512x512"
+      "src": "logo.png",
+      "type": "image/png",
+      "sizes": "512x512",
+      "purpose": "any maskable"
     }
   ],
   "start_url": "./index.html",
