--- a/manifest.json
+++ b/manifest.json
@@ -3,10 +3,16 @@
   "name": "Pryme Academy Fitness",
   "icons": [
     {
-      "src": "logo.png",
+      "src": "icon.png",
       "type": "image/png",
       "sizes": "512x512",
       "purpose": "any maskable"
+    },
+    {
+      "src": "icon.png",
+      "type": "image/png",
+      "sizes": "192x192",
+      "purpose": "any"
     }
   ],
   "start_url": "./index.html",
